--- a/templates/battleHistory.ejs
+++ b/templates/battleHistory.ejs
@@ -5,8 +5,21 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Battle History</title>
-    <link rel="stylesheet" href="/style.css">
 </head>
+
+<style>
+    html {
+        font-size: 14px;
+    }
+
+    body {
+        background-color: darkred;
+    }
+
+    h1 {
+        color: darkgreen;
+    }
+</style>
 
 <body>
 	<h1>Battle History</h1>
